# dnsmasq3

./: .gitignore  CHANGELOG  CMakeLists.txt  Cargo.toml  Makefile  README.md  VERSION  configuration_options.txt  dnsmasq.conf.example  go.mod
.cargo/: cargo
archive/: arp.rs  auth.rs  cache.rs  defines.rs  dhcp.rs  dns_type_strings.rs  dnsmasq_log.rs  forward.rs  hash_questions.rs  helper.rs  inotify.rs  option.rs  outpacket.rs  radv.rs  rfc1035.rs  rfc2131.rs  rfc3315.rs  rrfilter.rs  slack.rs  tables.rs  tftp.rs  util.rs
archive/c_source/src/: arp.c  bpf.c  dhcp.c  dhcp6.c  dnsmasq  dnsmasq.c  forward.c  network.c  tftp.c
c_source/: compile_commands.json
contrib/lease-tools/: dhcp_lease_time.c  dhcp_release.c  dhcp_release6.c
dnsmasq/: auth.go  bpf.go  cache.go  conntrack.go  crypto.go  dbus.go  dhcp.go  dhcp6.go  dhcp_common.go  dns_protocol.go  dnsmasq_h.go  edns0.go  lease.go  log.go  loop.go  network.go  outpacket.go  radv_protocol.go  rfc1035.go  rfc3315.go  tables.go  tftp.go  ubus.go
dnsmasq_orig_src/: .gitattributes  .gitignore  CHANGELOG.archive  CMakeLists.txt  FAQ  Makefile  dnsmasq.conf.example  doc.html  setup.html  trust-anchors.conf
dnsmasq_orig_src/bld/: Android.mk  bloat-o-meter  get-version  pkg-wrapper
dnsmasq_orig_src/contrib/MacOSX-launchd/: launchd-README.txt
dnsmasq_orig_src/contrib/Solaris10/: README
dnsmasq_orig_src/contrib/Suse/: README.susefirewall
dnsmasq_orig_src/contrib/conntrack/: README
dnsmasq_orig_src/contrib/dbus-test/: dbus-test.py
dnsmasq_orig_src/contrib/dnsmasq_MacOSX-pre10.4/: README.rtf
dnsmasq_orig_src/contrib/lease-access/: lease.access.patch
dnsmasq_orig_src/contrib/lease-tools/: Makefile  dhcp_lease_time.1  dhcp_lease_time.c  dhcp_release.1  dhcp_release.c  dhcp_release6.1  dhcp_release6.c
dnsmasq_orig_src/contrib/mactable/: macscript
dnsmasq_orig_src/contrib/port-forward/: portforward
dnsmasq_orig_src/contrib/reverse-dns/: reverse_replace.sh
dnsmasq_orig_src/contrib/systemd/: dnsmasq.service
dnsmasq_orig_src/contrib/try-all-ns/: README  README-2.47  README-2.78  dnsmasq-2.68-try-all-ns  dnsmasq-2.78xx-try-all-ns.patch
dnsmasq_orig_src/contrib/webmin/: README
dnsmasq_orig_src/contrib/wrt/: README
dnsmasq_orig_src/dbus/: DBus-interface
dnsmasq_orig_src/fmt/: .travis.yml  CMakeLists.txt  ChangeLog.rst  README.rst
dnsmasq_orig_src/fmt/doc/: api.rst  build.py  index.rst  usage.rst
dnsmasq_orig_src/fmt/doc/_templates/: layout.html
dnsmasq_orig_src/fmt/doc/html/: api.html  contents.html  genindex.html  index.html  search.html  syntax.html  usage.html
dnsmasq_orig_src/fmt/doc/html/_sources/: syntax.txt
dnsmasq_orig_src/fmt/support/: Vagrantfile
dnsmasq_orig_src/fmt/support/cmake/: fmt.pc.in
dnsmasq_orig_src/fmt/test/: CMakeLists.txt  assert-test.cc  color-test.cc  compile-test.cc  core-test.cc  custom-formatter-test.cc  format  format-impl-test.cc  format-test.cc  grisu-test.cc  gtest-extra-test.cc  gtest-extra.cc  gtest-extra.h  locale-test.cc  ostream-test.cc  posix-mock-test.cc  posix-test.cc  printf-test.cc  ranges-test.cc  scan.h  std-format-test.cc  test-assert.h  util.cc
dnsmasq_orig_src/man/: dnsmasq.8
dnsmasq_orig_src/man/es/: dnsmasq.8
dnsmasq_orig_src/man/fr/: dnsmasq.8
dnsmasq_orig_src/po/: de.po  es.po  fi.po  fr.po  id.po  it.po  no.po  pl.po  pt_BR.po  ro.po
dnsmasq_orig_src/spdlog/: CMakeLists.txt  meson.build  meson_options.txt
dnsmasq_orig_src/spdlog/bench/: meson.build
dnsmasq_orig_src/spdlog/cmake/: spdlog.pc.in
dnsmasq_orig_src/spdlog/example/: meson.build
dnsmasq_orig_src/spdlog/tests/: CMakeLists.txt  meson.build  test_daily_logger.cpp  test_file_logging.cpp  utils.cpp
dnsmasq_orig_src/src/: arp.cpp  blockdata.cpp  bpf.cpp  cache.cpp  config.h  dhcp-common.cpp  dhcp.cpp  dhcp6-protocol.rs  dnsmasq.h  dnssec.cpp  domain.cpp  dump.cpp  forward.cpp  inotify.cpp  ipset.cpp  lease.cpp  netlink.cpp  network.cpp  rfc2131.cpp  rfc3315.cpp  rrfilter.cpp  tables.cpp  ubus.cpp
dnsmasq_rs/: Cargo.toml
example_rust_code/netloom_rs/: .gitignore  Cargo.toml  LICENSE  README.md  default_config.yml  gdb  lldb-mi  service-names-port-numbers.txt
example_rust_code/netloom_rs/doc/: packet_component_diagram.puml
example_rust_code/netloom_rs/src/: arp.rs  config.rs  ethernet.rs  ip_proto.rs  ipv4.rs  ipv6.rs  main.rs  (+9 more)
example_rust_code/prism_tank_rs/: .env  Cargo.toml  README.md  rustfmt.toml
example_rust_code/prism_tank_rs/pt_controller/: Cargo.toml
example_rust_code/prism_tank_rs/pt_controller/src/: client.rs  lib.rs  main.rs  pt_controller_service.rs
example_rust_code/prism_tank_rs/pt_controller/tests/: integration_tests.rs
example_rust_code/prism_tank_rs/pt_grpc/: Cargo.toml
example_rust_code/prism_tank_rs/pt_grpc/src/: build.rs  lib.rs  prism_tank_grpc.rs  pt_common.proto  pt_controller.proto  pt_host_agent.proto
example_rust_code/prism_tank_rs/pt_host_agent/: Cargo.toml
example_rust_code/prism_tank_rs/pt_host_agent/src/: client.rs  lib.rs  main.rs  pt_host_agent_service.rs
example_rust_code/prism_tank_rs/pt_host_agent/src/pt_host_agent_service/: hostname.rs
example_rust_code/prism_tank_rs/pt_host_agent/tests/: integration_test.rs
example_rust_code/prism_tank_rs/pt_tests/: Cargo.toml
example_rust_code/prism_tank_rs/pt_tests/src/: main.rs
example_rust_code/prism_tank_rs/pt_util/: Cargo.toml
example_rust_code/prism_tank_rs/pt_util/src/: lib.rs
other/: dns-protocol.h.rs  dnsmasq-2.68-try-all-ns  dynamic-dnsmasq.pl
src/: addr_list.rs  addrlist.rs  alias_param.rs  all_addr.rs  allow_list.rs  app_context.rs  arp.rs  arp_record.rs  auth.cpp  auth.rs  auth_zone.rs  bigname.rs  blockdata.rs  blockdata_ops.rs  bogus_addr.rs  bpf.cpp  bpf.rs  cache.cpp  cache.rs  cli_opts.rs  cname.rs  cname_struct.rs  cond_domain.rs  config.rs  conntrack.rs  crec.rs  crypto.cpp  crypto.rs  daemon.rs  dbus.cpp  dbus.rs  dbus_defs.rs  defines.rs  delay_config.rs  dhcp-common.cpp  dhcp-protocol.h  dhcp.cpp  dhcp.rs  dhcp6.cpp  dhcp6.rs  (+163 more)
(+1 files in other folders)
