[package]
name = "dnsmasq_rs"
version = "0.1.0"
authors = ["Josh M. <cyrex562@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.11"
byteorder = "1.3.4"
socket = "0.0.7"