[package]
name = "dnsmasq_rs"
version = "0.1.0"
authors = ["Josh M. <cyrex562@gmail.com>"]
edition = "2018"

[[bin]]
name = "dnsmasq-rs"
path = "./src/dnsmasq.rs"

[dependencies]
libc = "0.2"
log = "0.4"
fern = "0.6"
byteorder = "1.4"
socket2 = "0.4"
clap="2.3"
winapi = "0.3"
rand="0.8"
num = "0.4"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
