[package]
name = "pt_grpc"
version = "0.1.0"
authors = ["Josh M. <joshmadden@occamsrazortech.com>"]
edition = "2018"
build = "src/build.rs"

[lib]
name = "pt_grpc"

[dependencies]
tonic = "^0.2"
tonic-build = { version = "^0.2", features = ["rustfmt"]}
prost = "^0.6"
tokio = { version = "^0.2", features = ["full"]}

[build-dependencies]
tonic-build = "0.2"

