[package]
name = "pt_host_agent"
version = "0.1.0"
authors = ["Josh M. <joshmadden@occamsrazortech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pt_host_agent"

[lib]
name = "pt_host_agent"

[dependencies]
tonic = "^0.2"
prost = "^0.6"
tokio = { version = "^0.2", features = ["full"]}
futures = { version = "0.3"}
async-stream = "0.2"
tower = "0.3"
pt_grpc = { path = "../pt_grpc"}
pt_util = { path = "../pt_util"}
redis = "*"
fern = "*"
log = "*"
chrono = "*"
uuid = { version = "*", features = ["serde", "v1", "v5", "v4"]}
function_name = "*"
dotenv = "*"