[package]
name = "pt_tests"
version = "0.1.0"
authors = ["Josh M. <jm@5thcol.tech>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "^0.2"
prost = "^0.6"
tokio = { version = "^0.2", features = ["full"]}
futures = { version = "0.3"}
async-stream = "0.2"
tower = "0.3"
pt_grpc = { path = "../pt_grpc"}
pt_host_agent = { path = "../pt_host_agent"}
pt_controller = { path = "../pt_controller"}
pt_util = { path = "../pt_util"}
redis = "*"
fern = "*"
log = "*"
function_name = "*"