[package]
name = "pt_util"
version = "0.1.0"
authors = ["Josh M. <jm@5thcol.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pt_util"

[dependencies]
tonic = "^0.2"
prost = "^0.6"
tokio = { version = "^0.2", features = ["full"]}
futures = { version = "0.3"}
async-stream = "0.2"
tower = "0.3"
redis = "*"
fern = {version = "*", features = ["syslog-3"]}
log = "*"
chrono = "*"
syslog = "*"